@@ -41,7 +41,7 @@ static void paintScreen(df::coord target, bool skip_unrevealed = false) {
 
     long pathable_tile_texpos = df::global::init->load_bar_texpos[1];
     long unpathable_tile_texpos = df::global::init->load_bar_texpos[4];
-    long on_off_texpos = Textures::getOnOffTexposStart();
+    long on_off_texpos = Textures::getPathableTexposStart();
     if (on_off_texpos > 0) {
         pathable_tile_texpos = on_off_texpos + 0;
         unpathable_tile_texpos = on_off_texpos + 1;
