@@ -63,6 +63,8 @@ changelog.txt uses a syntax similar to RST, with a few special sequences:
 - Window behavior: non-resizable windows now allow dragging by their frame edges by default
 - `gui/autodump`: fort-mode keybinding: Ctrl-H
 - Window behavior: if you have multiple DFHack tool windows open, scrolling the mouse wheel while over an unfocused window will focus it and raise it to the top
+- ``Textures.load_textures()``: can now load spritesheets with tilesizes other than 8x12.
+- ``gui/pathable``: now uses 32x32 sprites.
 
 ## Documentation
 
